modulo de EventLIVE

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/apexcharts.css">
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/my-styles.css">
     <!-- Web App Manifest -->
     <link rel="manifest" href="assets/manifest.json">
 
