--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="assets/css/my-styles.css">
     <!-- Web App Manifest -->
     <link rel="manifest" href="assets/manifest.json">
-
+    <link href="https://cdn.jsdelivr.net/npm/vuesax/dist/vuesax.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,500,600,700" rel="stylesheet">
 
 </head>
@@ -44,6 +44,7 @@
 <div class="mt-2" id="app"></div>
 <!-- built files will be auto injected -->
 <!-- All JavaScript Files -->
+<script src="https://unpkg.com/vuesax"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/slideToggle.min.js"></script>
 <script src="assets/js/internet-status.js"></script>
