--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,6 @@
 <script src="assets/js/active.js"></script>
 <!-- PWA -->
 <script src="assets/js/pwa.js"></script>
+<script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.0.0.js"></script>
 </body>
 </html>
