--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <!-- Web App Manifest -->
     <link rel="manifest" href="assets/manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 </head>
 <body>
@@ -58,5 +59,6 @@
 <!-- PWA -->
 <script src="assets/js/pwa.js"></script>
 <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.0.0.js"></script>
+<script  src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="  crossorigin="anonymous"></script>
 </body>
 </html>
